[gd_scene load_steps=31 format=2]

[ext_resource path="res://graphic_minigame/background_houses_orig.PNG" type="Texture" id=1]
[ext_resource path="res://graphic_minigame/background.PNG" type="Texture" id=2]
[ext_resource path="res://graphic_minigame/background_houses_shade.png" type="Texture" id=3]
[ext_resource path="res://scripts/Level_Biosolids.gd" type="Script" id=4]
[ext_resource path="res://Sounds/404329__inspectorj__toilet-flush-european-distant-lid-up.wav" type="AudioStream" id=5]
[ext_resource path="res://graphic_minigame/background_treatmentplant.PNG" type="Texture" id=6]
[ext_resource path="res://graphic_minigame/background_treatmentplant_shade.png" type="Texture" id=7]
[ext_resource path="res://graphic_minigame/background_digester.PNG" type="Texture" id=8]
[ext_resource path="res://graphic_minigame/background_digester_shade.png" type="Texture" id=9]
[ext_resource path="res://graphic_minigame/biosolid_truck.PNG" type="Texture" id=10]
[ext_resource path="res://graphic_minigame/main_tree.PNG" type="Texture" id=11]
[ext_resource path="res://graphic_minigame/biosolid_sunflower.PNG" type="Texture" id=12]
[ext_resource path="res://graphic_minigame/biosolid_truck_shade.png" type="Texture" id=13]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=14]
[ext_resource path="res://graphic_minigame/UI_Square.png" type="Texture" id=15]
[ext_resource path="res://graphic_minigame/shadow.png" type="Texture" id=16]
[ext_resource path="res://YouLose.tscn" type="PackedScene" id=17]
[ext_resource path="res://YouWin.tscn" type="PackedScene" id=18]

[sub_resource type="CapsuleShape2D" id=11]
radius = 1519.8
height = 2708.42

[sub_resource type="CapsuleShape2D" id=1]
radius = 1059.98
height = 455.115

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 189.182, 211.712 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.3, 0.35 ), Vector2( 0.3, 0.29 ), Vector2( 0.3, 0.35 ), Vector2( 0.3, 0.29 ), Vector2( 0.3, 0.35 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 527.339, 671.803 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 462.099, 563.32 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 605.972, 50.4695 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 71.2698, 583.105 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 478.506, 724.78 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 59.2134, 876.266 )

[sub_resource type="Animation" id=10]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2, 2.5, 4, 5, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1482.85, 891.435 ), Vector2( 1456.48, 564.43 ), Vector2( 1396.71, 564.43 ), Vector2( 1393.19, 485.316 ), Vector2( 1154.09, 457.186 ), Vector2( 1060.91, 400.927 ), Vector2( 403.383, 402.686 ), Vector2( 359.43, 342.91 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Deliver_Garden"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 2.9, 3.7, 5.3, 5.8, 7.2, 8.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1482.85, 891.435 ), Vector2( 1480, 548.608 ), Vector2( 1417.8, 543.333 ), Vector2( 1301.77, 450.155 ), Vector2( 1132.99, 457.187 ), Vector2( 1113.65, 407.961 ), Vector2( 749.727, 399.17 ), Vector2( 638.967, 256.765 ) ]
}

[node name="Level_Biosolids" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 0.934621, 0.700149 )
texture = ExtResource( 2 )
centered = false

[node name="ColorRect" type="ColorRect" parent="background"]
margin_left = 297.0
margin_top = 484.0
margin_right = 379.0
margin_bottom = 688.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="background"]
margin_left = 720.0
margin_top = 425.0
margin_right = 802.0
margin_bottom = 686.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="background"]
margin_left = 1089.88
margin_top = 624.902
margin_right = 1171.88
margin_bottom = 793.902
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="background"]
margin_left = 1090.0
margin_top = 709.0
margin_right = 1428.0
margin_bottom = 805.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="background"]
margin_left = 1393.0
margin_top = 709.0
margin_right = 1467.0
margin_bottom = 916.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="background"]
margin_left = 1393.0
margin_top = 825.0
margin_right = 1548.0
margin_bottom = 925.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="background"]
margin_left = 1481.0
margin_top = 825.0
margin_right = 1570.0
margin_bottom = 1410.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="background"]
margin_left = 297.0
margin_top = 625.0
margin_right = 1138.0
margin_bottom = 725.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="garden" type="Node2D" parent="."]
position = Vector2( -86.4267, -35.4571 )
scale = Vector2( 0.11, 0.11 )

[node name="Garden" type="Area2D" parent="garden"]
scale = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="garden/Garden"]
position = Vector2( 9789.49, 2863.16 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="ColorRect" type="ColorRect" parent="garden"]
margin_left = 7795.0
margin_top = 2149.0
margin_right = 11876.0
margin_bottom = 4130.0
color = Color( 0.372549, 0.231373, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="garden"]
margin_left = 7975.0
margin_top = 2235.0
margin_right = 11696.0
margin_bottom = 3984.0
color = Color( 0.301961, 0.176471, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="biosolid_sunflower" type="Sprite" parent="garden"]
position = Vector2( 10160.5, 2084.54 )
texture = ExtResource( 12 )

[node name="biosolid_sunflower2" type="Sprite" parent="garden"]
position = Vector2( 11545.9, 2782.56 )
texture = ExtResource( 12 )

[node name="biosolid_sunflower3" type="Sprite" parent="garden"]
position = Vector2( 8757.13, 2768.96 )
texture = ExtResource( 12 )

[node name="Light2D" type="Light2D" parent="garden"]
visible = false
position = Vector2( 9901.28, 3149.48 )
scale = Vector2( 19.3987, 15.5011 )
texture = ExtResource( 16 )

[node name="forest" type="Node2D" parent="."]

[node name="Forest" type="Area2D" parent="forest"]
position = Vector2( -42.1941, -28.1294 )
scale = Vector2( 0.16, 0.16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="forest/Forest"]
position = Vector2( 1966.98, 1232.98 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="main_tree" type="Sprite" parent="forest/Forest"]
position = Vector2( 1142.77, 1136.35 )
texture = ExtResource( 11 )

[node name="main_tree2" type="Sprite" parent="forest/Forest"]
position = Vector2( 2585.59, 1169.37 )
texture = ExtResource( 11 )

[node name="main_tree3" type="Sprite" parent="forest/Forest"]
position = Vector2( 1906.99, 1581.76 )
texture = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="forest/Forest"]
visible = false
position = Vector2( 1761.33, 1131.26 )
scale = Vector2( 19.6635, 17.0859 )
texture = ExtResource( 16 )

[node name="foreground" type="Node2D" parent="."]

[node name="MulchTextureProgress" type="TextureProgress" parent="foreground"]
margin_left = 1322.0
margin_top = 986.0
margin_right = 1894.0
margin_bottom = 1051.0
max_value = 4.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 15 )
tint_under = Color( 0.482353, 0.482353, 0.482353, 1 )
tint_progress = Color( 0.486275, 0, 0.85098, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_houses" type="Sprite" parent="foreground"]
light_mask = 2
position = Vector2( 301.08, 752.046 )
scale = Vector2( 1.07013, 0.982602 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="foreground/background_houses"]
stream = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="foreground/background_houses"]
visible = false
texture = ExtResource( 3 )

[node name="Area_House" type="Area2D" parent="foreground/background_houses"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/background_houses/Area_House"]
shape = SubResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="foreground/background_houses"]
margin_left = -253.0
margin_top = 249.0
margin_right = 302.0
margin_bottom = 313.0
max_value = 10.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 15 )
tint_under = Color( 0.462745, 0.462745, 0.462745, 1 )
tint_progress = Color( 0.478431, 0.298039, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_treatmentplant" type="Sprite" parent="foreground"]
position = Vector2( 786.756, 786.339 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="foreground/background_treatmentplant"]
visible = false
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="foreground/background_treatmentplant"]
anims/Shake2 = SubResource( 3 )

[node name="Area_WTP" type="Area2D" parent="foreground/background_treatmentplant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/background_treatmentplant/Area_WTP"]
position = Vector2( 73.6643, -28.6472 )
shape = SubResource( 4 )

[node name="background_digester" type="Sprite" parent="foreground"]
position = Vector2( 1116.03, 789.337 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="TextureProgress" type="TextureProgress" parent="foreground/background_digester"]
margin_left = -1546.0
margin_top = 664.0
margin_right = 622.0
margin_bottom = 868.0
max_value = 10.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 15 )
tint_under = Color( 0.254902, 0.254902, 0.254902, 1 )
tint_progress = Color( 0.654902, 0.843137, 0.192157, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="foreground/background_digester"]
visible = false
texture = ExtResource( 9 )

[node name="Position_digester" type="Position2D" parent="foreground/background_digester"]
script = ExtResource( 14 )

[node name="Area_digester" type="Area2D" parent="foreground/background_digester"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/background_digester/Area_digester"]
position = Vector2( 54.3005, 71.4482 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="foreground/background_digester"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/background_digester/StaticBody2D"]
position = Vector2( 66.0928, 684.261 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="foreground/background_digester/StaticBody2D"]
position = Vector2( -462.654, 151.626 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="foreground/background_digester/StaticBody2D"]
position = Vector2( 575.402, 147.738 )
shape = SubResource( 7 )

[node name="biosolid_truck" type="Sprite" parent="foreground"]
light_mask = 2
position = Vector2( 1482.85, 891.435 )
rotation = -1.5708
scale = Vector2( 0.2, -0.2 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="foreground/biosolid_truck"]
visible = false
texture = ExtResource( 13 )

[node name="Area_Truck" type="Area2D" parent="foreground/biosolid_truck"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/biosolid_truck/Area_Truck"]
position = Vector2( 12.9233, 112.005 )
shape = SubResource( 8 )

[node name="StaticBody2D2" type="StaticBody2D" parent="foreground/biosolid_truck"]
position = Vector2( 941.225, 3.10205 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="foreground/biosolid_truck/StaticBody2D2"]
position = Vector2( 37.4439, 467.36 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="foreground/biosolid_truck/StaticBody2D2"]
position = Vector2( -224.798, -127.779 )
rotation = 0.436332
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="foreground/biosolid_truck/StaticBody2D2"]
position = Vector2( 294.912, -197.501 )
rotation = -0.436332
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="foreground/biosolid_truck"]
anims/Deliver_Forest = SubResource( 10 )
anims/Deliver_Garden = SubResource( 12 )

[node name="Position_truck" type="Position2D" parent="foreground/biosolid_truck"]
position = Vector2( 722.783, 80.3062 )
script = ExtResource( 14 )

[node name="YouWin" parent="." instance=ExtResource( 18 )]
visible = false

[node name="YouLose" parent="." instance=ExtResource( 17 )]
visible = false
[connection signal="input_event" from="garden/Garden" to="." method="_on_Garden_input_event"]
[connection signal="input_event" from="forest/Forest" to="." method="_on_Forest_input_event"]
[connection signal="value_changed" from="foreground/MulchTextureProgress" to="." method="_on_MulchTextureProgress_value_changed"]
[connection signal="input_event" from="foreground/background_houses/Area_House" to="." method="_on_Area_House_input_event"]
[connection signal="mouse_exited" from="foreground/background_houses/Area_House" to="." method="_on_Area_House_mouse_exited"]
[connection signal="input_event" from="foreground/background_treatmentplant/Area_WTP" to="." method="_on_Area_WTP_input_event"]
[connection signal="mouse_exited" from="foreground/background_treatmentplant/Area_WTP" to="." method="_on_Area_WTP_mouse_exited"]
[connection signal="value_changed" from="foreground/background_digester/TextureProgress" to="." method="_on_TextureProgress_value_changed"]
[connection signal="input_event" from="foreground/background_digester/Area_digester" to="." method="_on_Area_digester_input_event"]
[connection signal="mouse_exited" from="foreground/background_digester/Area_digester" to="." method="_on_Area_digester_mouse_exited"]
[connection signal="input_event" from="foreground/biosolid_truck/Area_Truck" to="." method="_on_Area_Truck_input_event"]
[connection signal="mouse_exited" from="foreground/biosolid_truck/Area_Truck" to="." method="_on_Area_Truck_mouse_exited"]
[connection signal="animation_finished" from="foreground/biosolid_truck/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
